# E-Syn

./: .gitignore  CircuitParser.py  ParseResult.ipynb  README.md  abc.rc  analyze_data.py  analyze_data1.py  analyze_data2.py  circuitparser.cpp  extract_dot.py  graph_info.py  lisp2infix.py  log.txt  log_rc64b.txt  log_var.txt  log_var1.txt  multi_eqn_boolean.cpp  new_data.csv  normal.py  output.py  output.txt  output1.py  output1.txt  output2.py  output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt  packages.txt  pareto_analyze.py  pareto_optimal_points.csv  parser.out  parsetab.py  process_output_res.py  (+28 more)
abc/: result.blif
aigbdd/: LICENCE.md  Makefile  README.md
alpha_utils/: circuitparser.cpp
circuitparser/: Cargo.toml
converted_circuit_strash/: strash.sh  summarize.sh  summary.csv
demos/: 3.txt  out_test_abc_eqn.aig  out_test_abc_eqn.txt  out_test_abc_eqn_new.aig
deprecated/: data_collect_parallel.py  multi_eqn_boolean.cpp  split_concat.py
e-rewriter/: Cargo.toml
e-rewriter/src/: main.rs  myextract.rs  test.py
e-rewriter/src/model/: xgb.model  xgb_23_10_26_area.model  xgb_23_10_26_delay.model  xgb_23_10_26_delay_area.model  xgb_area.model  xgb_delay.model
e-rewriter/src/utils/: cost.rs  extractor.rs  language.rs  mod.rs  order_trait.rs  random_gen.rs  sym_eval.rs  xgboost.rs
graph_info/: out_graph_info.csv
model_compare/: comp.py
s-converter/: .gitignore  Cargo.toml
s-converter/TestCase/: input_example.txt  output_example2.txt
s-converter/src/: main.rs
(+1283 files in other folders)
