[package]
name = "e-rewriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egg = {version = "0.9.5", features = ["lp"]}
num = "0.4.0"
rand = "0.8"
ndarray = "0.15.4"
ndarray-rand = "0.14.0"


xgboost = "0.1.4"
sprs = "0.11"
log = "0.4"
env_logger = "0.10"
csv = "1.1"

